# cryptolens_project

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
docker/clickhouse/config.d/: keeper.xml
docker/clickhouse/initdb.d/: 01_schema.sql
docker/spark/: Dockerfile
src/cryptolens/: __main__.py  config.py  logging.py
src/cryptolens/binance/: client.py  parser.py
src/cryptolens/kafka/: producer.py
src/cryptolens/schemas/: trade.avsc
src/cryptolens/spark/: consumer.py
tests/: test_parsing.py  test_serialization.py  test_spark_consumer.py
